--- a/demo/modules/customer/myCommunity.html
+++ b/demo/modules/customer/myCommunity.html
@@ -292,6 +292,7 @@
 		  	   			</div>
 		  	   		</li>
 		  	   	</ul>
+		  	   	<div class="click-more"><a href="" class="getMore">点击加载更多</a></div>
 		  	   	<div class="no-content" style="display:none;padding:100px 0 150px;">
 		  	   	  <div class="no-spot-remind"><i class="no-content-icon"></i>
 		  	   	    <div class="remind-tip">景区附近还没有低碳联盟商家信息，我们正在努力喔~ 
@@ -299,6 +300,153 @@
 		  	   	  </div>
 		  		  </div>
 	  	    </div>
+		  	</div>
+		  	<div class="wrap-list-content list-content-activity">
+		  		<div class="content-title">
+		  			<a href="" class="readMore">更多活动</a>
+		  			<h6>其他活动推荐</h6>
+		  		</div>
+		  		<div class="list-activity">
+		  			<ul>
+		  				<li class="activity-item car-item">
+		  					<div class="activity-right">
+		  						<a href="">发私信</a>
+		  						<a href="">我要拼车</a>
+		  					</div>
+		  					<div class="activity-left">
+		  						<div class="wrap-pic"></div>
+		  						<div class="activity-info">
+		  							<h5>
+		  								<span>西木</span>
+		  								于今天16:20发布
+		  							</h5>
+		  							<div class="activity-common activity-time">出发日期:2016-11-02 09:22</div>
+		  							<div class="activity-common activity-details">线路:白云机场</div>
+		  						</div>
+		  					</div>
+		  				</li>
+		  				<li class="activity-item exchange-item">
+		  					<div class="activity-right">
+		  						<a href="">发私信</a>
+		  						<a href="">我要换购</a>
+		  					</div>
+		  					<div class="activity-left">
+		  						<div class="wrap-pic"></div>
+		  						<div class="activity-info">
+		  							<h5>
+		  								<span>西木</span>
+		  								于今天16:20发布
+		  							</h5>
+		  							<div class="activity-common activity-time">出发日期:2016-11-02 09:22</div>
+		  							<div class="activity-common activity-details">线路:白云机场</div>
+		  						</div>
+		  					</div>
+		  				</li>
+		  				<li class="activity-item join-item">
+		  					<div class="activity-right">
+		  						<a href="">发私信</a>
+		  						<a href="">我要参与</a>
+		  					</div>
+		  					<div class="activity-left">
+		  						<div class="wrap-pic"></div>
+		  						<div class="activity-info">
+		  							<h5>
+		  								<span>西木</span>
+		  								于今天16:20发布
+		  							</h5>
+		  							<div class="activity-common activity-time">出发日期:2016-11-02 09:22</div>
+		  							<div class="activity-common activity-details">线路:白云机场</div>
+		  						</div>
+		  					</div>
+		  				</li>
+		  				<li class="activity-item plant-item">
+		  					<div class="activity-right">
+		  						<a href="">发私信</a>
+		  						<a href="">植物认养</a>
+		  					</div>
+		  					<div class="activity-left">
+		  						<div class="wrap-pic"></div>
+		  						<div class="activity-info">
+		  							<h5>
+		  								<span>西木</span>
+		  								于今天16:20发布
+		  							</h5>
+		  							<div class="activity-common activity-time">出发日期:2016-11-02 09:22</div>
+		  							<div class="activity-common activity-details">线路:白云机场</div>
+		  						</div>
+		  					</div>
+		  				</li>
+		  				<li class="activity-item car-item">
+		  					<div class="activity-right">
+		  						<a href="">发私信</a>
+		  						<a href="">我要拼车</a>
+		  					</div>
+		  					<div class="activity-left">
+		  						<div class="wrap-pic"></div>
+		  						<div class="activity-info">
+		  							<h5>
+		  								<span>西木</span>
+		  								于今天16:20发布
+		  							</h5>
+		  							<div class="activity-common activity-time">出发日期:2016-11-02 09:22</div>
+		  							<div class="activity-common activity-details">线路:白云机场</div>
+		  						</div>
+		  					</div>
+		  				</li>
+		  				<li class="activity-item exchange-item">
+		  					<div class="activity-right">
+		  						<a href="">发私信</a>
+		  						<a href="">我要换购</a>
+		  					</div>
+		  					<div class="activity-left">
+		  						<div class="wrap-pic"></div>
+		  						<div class="activity-info">
+		  							<h5>
+		  								<span>西木</span>
+		  								于今天16:20发布
+		  							</h5>
+		  							<div class="activity-common activity-time">出发日期:2016-11-02 09:22</div>
+		  							<div class="activity-common activity-details">线路:白云机场</div>
+		  						</div>
+		  					</div>
+		  				</li>
+		  				<li class="activity-item join-item">
+		  					<div class="activity-right">
+		  						<a href="">发私信</a>
+		  						<a href="">我要参与</a>
+		  					</div>
+		  					<div class="activity-left">
+		  						<div class="wrap-pic"></div>
+		  						<div class="activity-info">
+		  							<h5>
+		  								<span>西木</span>
+		  								于今天16:20发布
+		  							</h5>
+		  							<div class="activity-common activity-time">出发日期:2016-11-02 09:22</div>
+		  							<div class="activity-common activity-details">线路:白云机场</div>
+		  						</div>
+		  					</div>
+		  				</li>
+		  				<li class="activity-item plant-item">
+		  					<div class="activity-right">
+		  						<a href="">发私信</a>
+		  						<a href="">植物认养</a>
+		  					</div>
+		  					<div class="activity-left">
+		  						<div class="wrap-pic"></div>
+		  						<div class="activity-info">
+		  							<h5>
+		  								<span>西木</span>
+		  								于今天16:20发布
+		  							</h5>
+		  							<div class="activity-common activity-time">出发日期:2016-11-02 09:22</div>
+		  							<div class="activity-common activity-details">线路:白云机场</div>
+		  						</div>
+		  					</div>
+		  				</li>
+		  			</ul>
+		  			<div class="click-more"><a href="" class="getMore">点击加载更多</a></div>
+		  		</div>
 		  	</div>
 		  </div>
 	</div>
