--- a/demo/modules/carbonExchange/carbonExchangeDetail.html
+++ b/demo/modules/carbonExchange/carbonExchangeDetail.html
@@ -7,80 +7,191 @@
 <link rel="stylesheet" href="../../statics/css/base.css"/>
 <link rel="stylesheet" href="../../statics/css/newStyle.css"/>
 <link rel="stylesheet" type="text/css" href="../../statics/css/carbonExchange.css"/>
-<script src="../../statics/script/jquery-1.7.2.min.js"></script>
-<script src="../../statics/script/config/config.js"></script>
-<script src="../../statics/script/nav.js"></script>
 </head>
 <body>
 <!--头部开始-->
-<div class="wrap-nav-tph"></div>
-<!--头部结束-->
-<div class="wrap-main">
-	<div class="exchange-detail clearfix">
-		<div class="thumbnail">
-			<img src="../../statics/image/funding-detail.png"/>
+<div class="wrap-nav-tph">
+	<div class="wrap-nav-top">
+		<div class="nav-top">
+			<div class="nav-user">
+				<a href="" class="user-info">
+					<img src="statics/image/pic-user-example.png" alt=""/>
+					<span>张女士</span>
+				</a>
+				<a href="" class="user-loginOut">退出</a>
+				<a href="" class="user-news"> <i class="icon-tip">93</i>
+				</a>
+			</div>
+			<div class="nav-time">
+				<span class="left">2016-10-12</span>
+				<span class="right">星期四</span>
+			</div>
+
 		</div>
-		<div class="detail-con" id="conpouDetailRight">
-			<!-- <h3>【海珠广场】<span>广州宾馆得云宫酒楼</span></h3>
-			<p class="address"><i></i>广州市越秀区110号 </p>
-			<h4><span>券</span>100元代金券1份，可叠加（最多3份）</h4>
-			<div class="price">
-				<span class="tanbi">150</span><span class="unit">碳币</span>+<span class="rmb">￥80.00</span>
-			</div>
-			<div class="describe">
-				<p>有效期：2015-08-01至2017-01-31   周六、周日、节假日除外</p>
-				<p>兑换条件：无需预约</p>
-				<p class="indent">最多可累计使用3张，不兑现，不找零，谢绝3桌及以上团体客人参加本次兑换不再与其他优惠同享提供免费WIFI</p>
-			</div>
-			<div class="operation">
-				<div class="exchange-num">
-					<h5>兑换数量：</h5>
-					<div class="clearfix calc">
-						<div class="reduce rect" id="reduce">-</div>
-						<input class="number" id="number" value="0" placeholder="0">
-						<div class="plus rect" id="plus">+</div>
+	</div>
+	<div class="wrap-nav-content">
+		<div class="nav-tph">
+			<div class="nav-left">
+				<div class="wrap-logo">
+					<a href="">
+						<img src="statics/image/logo.png"></a>
+				</div>
+				<div class="wrap-address">
+					<div class="wrap-up"> <i class="icon-address"></i>
+						<span class="address" id="selectCity">广州</span>
+						<span class="icon-dropdown"></span>
 					</div>
-					<p>温馨提示：最多选3份</p>
+					<ul class="address-list" id="addressList">
+						<li class="item" onclick="selectCity(this);">韶关市</li>
+						<li class="item" onclick="selectCity(this);">深圳市</li>
+						<li class="item" onclick="selectCity(this);">珠海市</li>
+						<li class="item" onclick="selectCity(this);">佛山市</li>
+						<li class="item" onclick="selectCity(this);">惠州市</li>
+						<li class="item" onclick="selectCity(this);">河源市</li>
+						<li class="item" onclick="selectCity(this);">东莞市</li>
+						<li class="item" onclick="selectCity(this);"s>中心市</li>
+					</ul>
 				</div>
 			</div>
-			<div class="spend">
-				<h5>兑换数量：</h5>
-				<input class="number" id="spend" value="0" placeholder="0">
-				<p>碳币</p>
+			<div class="nav-right">
+				<ul id="tph-nav">
+					<li class="nav-item">
+						<a class="item-a" href="">首页</a>
+					</li>
+					<li class="nav-item">
+						<a class="item-a" href="">碳币兑换</a>
+					</li>
+					<li class="nav-item">
+						<a class="item-a" href="">低碳众筹</a>
+					</li>
+					<li class="nav-item">
+						<a class="item-a" href="">低碳活动</a>
+					</li>
+					<li class="nav-item noActive-item" attr-href="modules/carbonInfo/carbonInfoList.html">
+						<a class="item-a" href="">低碳资讯</a>
+						<div class="wrap-sub-nav">
+							<ul>
+								<li class="sub-nav-item">
+									<i class="active1"></i>
+									<a href="modules/carbonInfo/carbonInfoList.html">换物</a>
+								</li>
+								<li class="sub-nav-item">
+									<i class="active2"></i>
+									<a href="modules/carbonInfo/carbonInfoList.html">顺风车</a>
+								</li>
+								<li class="sub-nav-item">
+									<i class="active3"></i>
+									<a href="modules/carbonInfo/carbonInfoList.html">植物认领</a>
+								</li>
+								<li class="sub-nav-item">
+									<i class="active4"></i>
+									<a href="modules/carbonInfo/carbonInfoList.html">低碳活动</a>
+								</li>
+							</ul>
+						</div>
+					</li>
+					<li class="nav-item" attr-href="modules/carbonTrading/carbonTradeCompany.html">
+						<a class="item-a" href="">减碳置换</a>
+						<div class="wrap-sub-nav">
+							<ul>
+								<li class="sub-nav-item">
+									<i class="active1"></i>
+									<a href="modules/carbonTrading/carbonTradeCompany.html">换物</a>
+								</li>
+								<li class="sub-nav-item">
+									<i class="active2"></i>
+									<a href="modules/carbonTrading/carbonTradeCompany.html">顺风车</a>
+								</li>
+								<li class="sub-nav-item">
+									<i class="active3"></i>
+									<a href="modules/carbonTrading/carbonTradeCompany.html">植物认领</a>
+								</li>
+								<li class="sub-nav-item">
+									<i class="active4"></i>
+									<a href="modules/carbonTrading/carbonTradeCompany.html">低碳活动</a>
+								</li>
+							</ul>
+						</div>
+					</li>
+					<li class="nav-item">
+						<a class="item-a" href="">低碳产品</a>
+					</li>
+				</ul>
 			</div>
-			<div class="btn btn-success btn-large" id="exchange-btn">
-				立即兑换
-			</div> -->
 		</div>
+	</div>
+</div>
+<!--头部结束-->
+<div class="wrap-main">
+	
 </div>
 
-<div class="business-introduce" id="businessIntroduce">
-	<!-- <h3>【海珠广场】广州宾馆得云宫酒楼</h3>
+
+<div class="exchange-detail clearfix">
+	<div class="thumbnail">
+		<img src="../../statics/image/funding-detail.png"/>
+	</div>
+	<div class="detail-con">
+		<h3>【海珠广场】<span>广州宾馆得云宫酒楼</span></h3>
+		<p class="address"><i></i>广州市越秀区110号 </p>
+		<h4><span>券</span>100元代金券1份，可叠加（最多3份）</h4>
+		<div class="price">
+			<span class="tanbi">150</span><span class="unit">碳币</span>+<span class="rmb">￥80.00</span>
+		</div>
+		<div class="describe">
+			<p>有效期：2015-08-01至2017-01-31   周六、周日、节假日除外</p>
+			<p>兑换条件：无需预约</p>
+			<p class="indent">最多可累计使用3张，不兑现，不找零，谢绝3桌及以上团体客人参加本次兑换不再与其他优惠同享提供免费WIFI</p>
+		</div>
+		<div class="operation">
+			<div class="exchange-num">
+				<h5>兑换数量：</h5>
+				<div class="clearfix calc">
+					<div class="reduce rect" id="reduce">-</div>
+					<input class="number" id="number" value="0" placeholder="0">
+					<div class="plus rect" id="plus">+</div>
+				</div>
+				<p>温馨提示：最多选3份</p>
+			</div>
+		</div>
+		<div class="spend">
+			<h5>兑换数量：</h5>
+			<input class="number" id="spend" value="0" placeholder="0">
+			<p>碳币</p>
+		</div>
+		<div class="btn btn-success btn-large" id="exchange-btn">
+			立即兑换
+		</div>
+	</div>
+</div>
+
+<div class="business-introduce">
+	<h3>【海珠广场】广州宾馆得云宫酒楼</h3>
 	<p class="introduce">
 		广州宾馆得云宫酒楼坐落在西安市莲湖区自强西路52号春晓馨苑1号楼二楼（纸坊村十字向东50米路南），交通便利，门前有近百个免费泊车位，是一家按高档标准配备的中高端湘粤菜系酒楼，酒楼经营面积1600平方米，拥有各类雅间14间，有精致小包间、有贵宾豪华包间、有连包可打通，适宜亲朋聚会、商务宴请、商务洽谈等活动，酒楼600平方米宴会大厅宽敞明亮，气派奢华，典雅舒适，可同时摆放30桌左右，适宜婚宴、满月宴、公司年会、客户答谢宴会等各类宴席。酒楼力求全面提供高端菜品及餐饮服务，中低档收费，用心打造餐饮传奇。
 	</p>
-	<div class="item">营业时间：10：00-22：00</div>
-	<div class="item">地址： 广州起义路2号广州宾馆25-26楼(近海珠广场)</div>
-	<div class="item">电话： 020-83339883</div>
+	<div class="item">
+		营业时间：10：00-22：00
+	</div>
+	<div class="item">
+		地址： 广州起义路2号广州宾馆25-26楼(近海珠广场)
+	</div>
+	<div class="item">
+		电话： 020-83339883
+	</div>
 	<div class="business-pic">
 		<ul class="clearfix">
-			<li>
-				<img src="../../statics/image/funding-detail-pic.png"/>
-			</li>
-			<li>
-				<img src="../../statics/image/funding-detail-pic.png"/>
-			</li>
-			<li>
-				<img src="../../statics/image/funding-detail-pic.png"/>
-			</li>
+			<li><img src="../../statics/image/funding-detail-pic.png"/></li>
+			<li><img src="../../statics/image/funding-detail-pic.png"/></li>
+			<li><img src="../../statics/image/funding-detail-pic.png"/></li>
 		</ul>
-	</div> -->
+	</div>
 </div>
 
 <div class="funding-detail-coupon">
-	<div class="title" style="border-bottom:none;">该商家更多优惠</div>
-	<div class="container" id="exchangeDetailList">
-		<!-- <ul class="clearfix">
+	<div class="title">该商家更多优惠</div>
+	<div class="container">
+		<ul class="clearfix">
 			<li class="coupon-item exchange-coupon">
 				<div class="coupon-left">
 					兑换券
@@ -275,12 +386,60 @@
 					<p>已兑300张</p>
 				</div>
 			</li>
-		</ul> -->
+		</ul>
 	</div>
+	<div class="load-more">点击加载更多</div>
 </div>
-</div>
+
+
+
 <!--尾部开始-->
-<div class="pageFooter"></div>
+	<div class="pageFooter">
+		<div class="width1220">
+		     <div class="wrap-partner-list">
+		     	<span class="partner-title">合作伙伴：</span>
+		     	<ul class="partner-list">
+		     		<li><a href="">张家界景区</a></li>
+		     		<li><a href="">万绿湖景区</a></li>
+		     		<li><a href="">上海路路通</a></li>
+		     		<li><a href="">汉能</a></li>
+		     		<li><a href="">广州快速公交</a></li>
+		     		<li><a href="">深圳立冰空调</a></li>
+		     	</ul>
+		     </div>  
+		</div>
+		<div class="width960">
+			<div class="company-info">
+				<ul>
+					<li class="item">
+						<img src="statics/image/logo-footer.png"/>
+						<h6>广东省碳普惠创新发展中心</h6>
+					</li>
+					<li class="item item-second">
+						<p><a href="modules/aboutUs/aboutUs.html">关于我们</a></p>
+						<p><a href="">企业联盟</a></p>
+						<p><a href="">网站协议</a></p>
+					</li>
+					<li class="item item-third">
+						<i class="icon-send"></i><span class="email">tanph@ceprei.org</span>
+						<div class="fackback"><a href="">投诉建议</a></div>
+					</li>
+					<li class="item-four">
+						<a href=""><img class="pic-left" src="statics/image/pic-weibo.png" /></a>
+						<a href=""><img class="pic-left" src="statics/image/pic-weixin.png" /></a>
+						<a href="" class="download-link"><img src="statics/image/pic-download.png" class="download-pic" />
+						<span class="link-text">下载app</span>
+						</a> 
+					</li>
+				</ul>
+			</div>
+			<div class="company-copyright">
+				<p>由赛宝认证中心提供技术支持 Tel:020-87236606 Email: tanph@ceprei.org </p>
+				<p>Copyright@2014-2018 广州赛宝认证中心服务有限公司 All Rights Reserved 粤ICP备05096650号-3</p>
+				<p id="str2">asgasgasgasgasfasfasf</p>
+			</div>
+		</div>
+	</div>
 <!--尾部结束-->
 <!--提示登录框-->
 <div class="login-dialog" id="login-dialog"></div>
@@ -290,6 +449,8 @@
 <div class="lack-dialog" id="lack-dialog"></div>
 <!--兑换成功框-->
 <div class="success-dialog" id="success-dialog"></div>
+<script src="../../statics/script/jquery-1.7.2.min.js"></script>
+<script src="../../statics/script/config/config.js"></script>
 <script src="../../statics/script/dialog.js" type="text/javascript" charset="utf-8"></script>
 <script src="js/carbonExchangeDetail.js" type="text/javascript" charset="utf-8"></script>
 </body>
